--- a/WorkShop-Website-Final-FrontEnd/front-end-web/gateway/front-user/profile.html
+++ b/WorkShop-Website-Final-FrontEnd/front-end-web/gateway/front-user/profile.html
@@ -234,12 +234,12 @@
                   <img src="../../public/images/1.jpg" class="img-rounded" alt="Cinque Terre" width="100%">
                   <div class="btn_img" id="change-img">
                     <input type="file" id="fileLoader" name="files" title="Load File" style = "display:none;" />
-
-                    <button id="btnOpenFileDialog" type="button" class="btn btn-primary" onclick="openfileDialog();">Thay đổi</button>
                   </div>
                 </div>
                 <div class="maininfo">
                   <ul class="list-des">
+                    <li><i class="fa fa-user user-profile-icon"></i> Công Trịnh Văn
+                    </li>
                     <li><i class="fa fa-map-marker user-profile-icon"></i> Thành Phố Hồ Chí Minh
                     </li>
                     <li>
