modify more page

--- a/WorkShop-Website-Final-FrontEnd/front-end-web/gateway/front-admin/managernewsevent.html
+++ b/WorkShop-Website-Final-FrontEnd/front-end-web/gateway/front-admin/managernewsevent.html
@@ -31,8 +31,6 @@
           <a href="javascript:;" class="dropdown-toggle info-number" data-toggle="dropdown" aria-expanded="false"><i id="inbox" class="fa fa-envelope-o" aria-hidden="true" style="font-size: 15px;">
             <sup><span class="badge badge-default"  style="background-color: #1ABB9C;">3</span></sup></i>
           </a>
-
-
           <ul id="menu1" class="dropdown-menu list-unstyled msg_list" role="menu">
             <li >
               <a>
@@ -389,6 +387,60 @@
 
                       <div class="clearfix"></div>
                       <hr>
+                      <table class="table table-bordered custable customtable2 table-hover" id="tablestatistic">
+                        <thead>
+                          <tr>
+                            <th>Stt</th>
+                            <th>Chủ đề</th>
+                            <th>Tin tức/sự kiện</th>
+                            <th>Ngày bắt đầu</th>
+                            <th>Ngày kết thúc</th>
+                            <th></th>
+                          </tr>
+                        </thead>
+                        <tbody id="myTable">
+                          <tr class="cus-colo">
+                            <td>1</td>
+                            <td>A</td>
+                            <td>B</td>
+                            <td>C</td>
+                            <td>D</td>
+                            <td><input type="checkbox" name=""></td>
+                          </tr>
+                          <tr>
+                            <td>2</td>
+                            <td>A</td>
+                            <td>B</td>
+                            <td>C</td>
+                            <td>D</td>
+                            <td><input type="checkbox" name=""></td>
+                          </tr>
+                          <tr class="cus-colo">
+                            <td>3</td>
+                            <td>A</td>
+                            <td>B</td>
+                            <td>C</td>
+                            <td>D</td>
+                            <td><input type="checkbox" name=""></td>
+                          </tr>
+                          <tr>
+                            <td>4</td>
+                            <td>A</td>
+                            <td>B</td>
+                            <td>C</td>
+                            <td>D</td>
+                            <td><input type="checkbox" name=""></td>
+                          </tr>
+                          <tr class="cus-colo">
+                            <td>5</td>
+                            <td>A</td>
+                            <td>B</td>
+                            <td>C</td>
+                            <td>D</td>
+                            <td><input type="checkbox" name=""></td>
+                          </tr>
+                        </tbody>
+                      </table>
                      <div class="formtopic">
                        <form>
                         <div class="row space-fiels">
@@ -474,6 +526,60 @@
                      </div>
                      <div class="clearfix"></div>
                       <hr>
+                      <table class="table table-bordered custable customtable2 table-hover" id="tablestatistic">
+                        <thead>
+                          <tr>
+                            <th>Stt</th>
+                            <th>Chủ đề</th>
+                            <th>Tin tức/sự kiện</th>
+                            <th>Ngày bắt đầu</th>
+                            <th>Ngày kết thúc</th>
+                            <th></th>
+                          </tr>
+                        </thead>
+                        <tbody id="myTable">
+                          <tr class="cus-colo">
+                            <td>1</td>
+                            <td>A</td>
+                            <td>B</td>
+                            <td>C</td>
+                            <td>D</td>
+                            <td><input type="checkbox" name=""></td>
+                          </tr>
+                          <tr>
+                            <td>2</td>
+                            <td>A</td>
+                            <td>B</td>
+                            <td>C</td>
+                            <td>D</td>
+                            <td><input type="checkbox" name=""></td>
+                          </tr>
+                          <tr class="cus-colo">
+                            <td>3</td>
+                            <td>A</td>
+                            <td>B</td>
+                            <td>C</td>
+                            <td>D</td>
+                            <td><input type="checkbox" name=""></td>
+                          </tr>
+                          <tr>
+                            <td>4</td>
+                            <td>A</td>
+                            <td>B</td>
+                            <td>C</td>
+                            <td>D</td>
+                            <td><input type="checkbox" name=""></td>
+                          </tr>
+                          <tr class="cus-colo">
+                            <td>5</td>
+                            <td>A</td>
+                            <td>B</td>
+                            <td>C</td>
+                            <td>D</td>
+                            <td><input type="checkbox" name=""></td>
+                          </tr>
+                        </tbody>
+                      </table>
                      <div class="formtopic">
                        <form>
                         <div class="row space-fiels">
