--- a/WorkShop-Website-Final-FrontEnd/front-end-web/gateway/home/index.html
+++ b/WorkShop-Website-Final-FrontEnd/front-end-web/gateway/home/index.html
@@ -14,7 +14,7 @@
     <script src="../../public/js/bootstrap.min.js"></script>
 
     <!-- custom design  -->
-    <link rel="stylesheet" href="../../private/assets/admin/privateCss/privateCss.css">
+
     <link rel="stylesheet" href="../../public/css/home.css">
     <script src="../../public/js/homejs.js"></script>
 </head>
@@ -29,7 +29,7 @@
                 <div class="col-xs-6 col-sm-4 col-md-4 col-md-offset-4 col-xs-offset-0 aline-t">
                     <h4 class="text-right"><strong> Social Network</strong></h4>
                     <div class="row">
-                        <div class="col-xs-12 col-md-6 col-md-offset-8 col-xs-offset-0">
+                        <div class="col-xs-12 col-md-6 col-md-offset-6 col-xs-offset-0">
                             <a target="_blank" href="https://www.facebook.com/" class="fa fa-facebook icon-face"></a>
                             <a target="_blank" href="https://www.google.com.vn/" class="fa fa-google icon-goo"></a>
                             <a target="_blank" href="https://twitter.com/" class="fa fa-twitter icon-tw"></a>
@@ -51,7 +51,7 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Trang Chủ</a></li>
+                    <li class="active"><a href="index.html">Trang Chủ</a></li>
                     <li>
                         <a href="#">Chủ đề </a>
                     </li>
@@ -219,7 +219,7 @@
             </div>
             <div class="body-activi">
                 <div class="row" style="margin: 0px;">
-                    <div class="col-md-4 col-sm-4 col-xs-4">
+                    <div class="col-md-4 col-sm-4 col-xs-12">
                         <div class="captiactivi">
                             <h2>Chủ đề nổi bật trong tháng</h2>
                             <hr>
@@ -232,7 +232,7 @@
                             <a href="#listacti"  data-slide="prev"><i class="fa fa-angle-right"></i> </a>
                         </div>
                     </div>
-                    <div class="col-md-8 col-sm-8 col-xs-8" style="padding: 0px;">
+                    <div class="col-md-8 col-sm-8 col-xs-12" style="padding: 0px;">
                         <div id="listacti" class="carousel slide" data-ride="carousel">
                             <div class="carousel-inner">
 
@@ -331,7 +331,7 @@
 
               </section>  
           </div>
-        </div>
+      </div>
     </div>
     <footer>
         <div class="footer-home">
