--- a/WorkShop-Website-Final-FrontEnd/front-end-web/gateway/front-admin/manageruser.html
+++ b/WorkShop-Website-Final-FrontEnd/front-end-web/gateway/front-admin/manageruser.html
@@ -357,6 +357,48 @@
 
                       <div class="clearfix"></div>
                       <hr>
+                      <table class="table table-bordered custable customtable2 table-hover" id="tablestatistic">
+                        <thead>
+                          <tr>
+                            <th>Stt</th>
+                            <th>Tên đăng nhập</th>
+                            <th>Tên người dùng</th>
+                            <th>Lựa chọn</th>
+                          </tr>
+                        </thead>
+                        <tbody id="myTable">
+                          <tr class="cus-colo">
+                            <td>1</td>
+                            <td>Bài Dự Thi 1</td>
+                            <td>A</td>
+                            <td><input type="checkbox" name=""></td>
+                          </tr>
+                          <tr>
+                            <td>2</td>
+                            <td>Bài Dự Thi 2</td>
+                            <td>A</td>
+                            <td><input type="checkbox" name=""></td>
+                          </tr>
+                          <tr class="cus-colo">
+                            <td>3</td>
+                            <td>Bài Dự Thi 3</td>
+                            <td>A</td>
+                            <td><input type="checkbox" name=""></td>
+                          </tr>
+                          <tr>
+                            <td>4</td>
+                            <td>Bài Dự Thi 4</td>
+                            <td>A</td>
+                            <td><input type="checkbox" name=""></td>
+                          </tr>
+                          <tr class="cus-colo">
+                            <td>5</td>
+                            <td>Bài Dự Thi 1</td>
+                            <td>A</td>
+                            <td><input type="checkbox" name=""></td>
+                          </tr>
+                        </tbody>
+                      </table>
                      <div class="formtopic">
                        <form>
                         <div class="row space-fiels">
@@ -420,6 +462,48 @@
                     </div>
                     <div class="clearfix"></div>
                      <hr>
+                     <table class="table table-bordered custable customtable2 table-hover" id="tablestatistic">
+                        <thead>
+                          <tr>
+                            <th>Stt</th>
+                            <th>Tên đăng nhập</th>
+                            <th>Tên người dùng</th>
+                            <th>Lựa chọn</th>
+                          </tr>
+                        </thead>
+                        <tbody id="myTable">
+                          <tr class="cus-colo">
+                            <td>1</td>
+                            <td>Bài Dự Thi 1</td>
+                            <td>A</td>
+                            <td><input type="checkbox" name=""></td>
+                          </tr>
+                          <tr>
+                            <td>2</td>
+                            <td>Bài Dự Thi 2</td>
+                            <td>A</td>
+                            <td><input type="checkbox" name=""></td>
+                          </tr>
+                          <tr class="cus-colo">
+                            <td>3</td>
+                            <td>Bài Dự Thi 3</td>
+                            <td>A</td>
+                            <td><input type="checkbox" name=""></td>
+                          </tr>
+                          <tr>
+                            <td>4</td>
+                            <td>Bài Dự Thi 4</td>
+                            <td>A</td>
+                            <td><input type="checkbox" name=""></td>
+                          </tr>
+                          <tr class="cus-colo">
+                            <td>5</td>
+                            <td>Bài Dự Thi 1</td>
+                            <td>A</td>
+                            <td><input type="checkbox" name=""></td>
+                          </tr>
+                        </tbody>
+                      </table>
                      <div class="formtopic">
                         <form>
                           <div class="row space-fiels">
