--- a/WorkShop-Website-Final-FrontEnd/front-end-web/gateway/front-admin/topicmanagement.html
+++ b/WorkShop-Website-Final-FrontEnd/front-end-web/gateway/front-admin/topicmanagement.html
@@ -457,6 +457,60 @@
 
                       <div class="clearfix"></div>
                       <hr>
+                      <table class="table table-bordered custable customtable2 table-hover" id="tablestatistic">
+                        <thead>
+                          <tr>
+                            <th>Stt</th>
+                            <th>Chủ đề</th>
+                            <th>Lĩnh vực</th>
+                            <th>Ngày bắt đầu</th>
+                            <th>Ngày kết thúc</th>
+                            <th></th>
+                          </tr>
+                        </thead>
+                        <tbody id="myTable">
+                          <tr class="cus-colo">
+                            <td>1</td>
+                            <td>A</td>
+                            <td>B</td>
+                            <td>C</td>
+                            <td>D</td>
+                            <td><input type="checkbox" name=""></td>
+                          </tr>
+                          <tr>
+                            <td>2</td>
+                            <td>A</td>
+                            <td>B</td>
+                            <td>C</td>
+                            <td>D</td>
+                            <td><input type="checkbox" name=""></td>
+                          </tr>
+                          <tr class="cus-colo">
+                            <td>3</td>
+                            <td>A</td>
+                            <td>B</td>
+                            <td>C</td>
+                            <td>D</td>
+                            <td><input type="checkbox" name=""></td>
+                          </tr>
+                          <tr>
+                            <td>4</td>
+                            <td>A</td>
+                            <td>B</td>
+                            <td>C</td>
+                            <td>D</td>
+                            <td><input type="checkbox" name=""></td>
+                          </tr>
+                          <tr class="cus-colo">
+                            <td>5</td>
+                            <td>A</td>
+                            <td>B</td>
+                            <td>C</td>
+                            <td>D</td>
+                            <td><input type="checkbox" name=""></td>
+                          </tr>
+                        </tbody>
+                      </table>
                      <div class="formtopic">
                        <form>
                         <div class="row space-fiels">
@@ -628,6 +682,60 @@
                      </div>
                      <div class="clearfix"></div>
                       <hr>
+                      <table class="table table-bordered custable customtable2 table-hover" id="tablestatistic">
+                        <thead>
+                          <tr>
+                            <th>Stt</th>
+                            <th>Chủ đề</th>
+                            <th>Lĩnh vực</th>
+                            <th>Ngày bắt đầu</th>
+                            <th>Ngày kết thúc</th>
+                            <th></th>
+                          </tr>
+                        </thead>
+                        <tbody id="myTable">
+                          <tr class="cus-colo">
+                            <td>1</td>
+                            <td>A</td>
+                            <td>B</td>
+                            <td>C</td>
+                            <td>D</td>
+                            <td><input type="checkbox" name=""></td>
+                          </tr>
+                          <tr>
+                            <td>2</td>
+                            <td>A</td>
+                            <td>B</td>
+                            <td>C</td>
+                            <td>D</td>
+                            <td><input type="checkbox" name=""></td>
+                          </tr>
+                          <tr class="cus-colo">
+                            <td>3</td>
+                            <td>A</td>
+                            <td>B</td>
+                            <td>C</td>
+                            <td>D</td>
+                            <td><input type="checkbox" name=""></td>
+                          </tr>
+                          <tr>
+                            <td>4</td>
+                            <td>A</td>
+                            <td>B</td>
+                            <td>C</td>
+                            <td>D</td>
+                            <td><input type="checkbox" name=""></td>
+                          </tr>
+                          <tr class="cus-colo">
+                            <td>5</td>
+                            <td>A</td>
+                            <td>B</td>
+                            <td>C</td>
+                            <td>D</td>
+                            <td><input type="checkbox" name=""></td>
+                          </tr>
+                        </tbody>
+                      </table>
                      <div class="formtopic">
                        <form>
                         <div class="row space-fiels">
